--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,13 +2,14 @@ version: 2
 jobs:
   rubocop:
     docker:
-      - image: circleci/ruby:2.7-browsers-legacy
+      - image: circleci/ruby:2.7.1
         environment:
           RAILS_ENV: test
           POSTGRES_HOST: 127.0.0.1
       - image: circleci/postgres:9.4
         environment:
           POSTGRES_USER: root
+          POSTGRES_PASSWORD: root
           POSTGRES_DB: photo_submission_test
     working_directory: ~/repo
     steps:
@@ -18,7 +19,7 @@ jobs:
             - v1-dependencies-{{ checksum "Gemfile.lock" }}
             # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
-      - run: bundle install --jobs=4 --retry=3 --path vendor/bundle
+      - run: bundle config set path 'vendor/bundle'
       - run: yarn install
       - save_cache:
           paths:
@@ -47,7 +48,7 @@ jobs:
             - v1-dependencies-{{ checksum "Gemfile.lock" }}
             # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
-      - run: bundle install --jobs=4 --retry=3 --path vendor/bundle
+      - run: bundle config set path 'vendor/bundle'
       - run: yarn install
       - save_cache:
           paths:
