--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
             # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
       # - run: bundle config set path 'vendor/bundle'
-      # - run: yarn install
+      - run: bundle install
       - save_cache:
           paths:
             - ./vendor/bundle
@@ -49,7 +49,7 @@ jobs:
             # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
       # - run: bundle config set path 'vendor/bundle'
-      # - run: yarn install
+      - run: bundle install
       - save_cache:
           paths:
             - ./vendor/bundle
