--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ jobs:
         environment:
           RAILS_ENV: test
           POSTGRES_HOST: 127.0.0.1
-      - image: circleci/postgres:9.4
+      - image: circleci/postgres:12.4
         environment:
           POSTGRES_USER: root
           POSTGRES_PASSWORD: root
@@ -32,13 +32,14 @@ jobs:
 
   rspec:
     docker:
-      - image: circleci/ruby:2.7-browsers-legacy
+      image: circleci/ruby:2.7.1
         environment:
           RAILS_ENV: test
           POSTGRES_HOST: 127.0.0.1
-      - image: circleci/postgres:9.4
+      - image: circleci/postgres:12.4
         environment:
           POSTGRES_USER: root
+          POSTGRES_PASSWORD: root
           POSTGRES_DB: photo_submission_test
     working_directory: ~/repo
     steps:
