--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ jobs:
 
   rspec:
     docker:
-      image: circleci/ruby:2.7.1
+      - image: circleci/ruby:2.7.1
         environment:
           RAILS_ENV: test
           POSTGRES_HOST: 127.0.0.1
