--- a/config/rubocop/rails.yml
+++ b/config/rubocop/rails.yml
@@ -51,3 +51,6 @@ Rails/UnknownEnv:
     - test # rubocop default.yml
     - production # rubocop default.yml
     - staging
+
+Rails/NotNullColumn:
+  Enabled: false
